Header barra di ricerca

--- a/css/style.css
+++ b/css/style.css
@@ -25,7 +25,15 @@ HEADER
 --------
 */
 
-header {
+/* header {
+    height: 4.375rem;
+}
+
+header > div {
+    height: 4.375rem;
+} */
+
+header .row {
     height: 4.375rem;
 }
 
