Main inferiore tabella

--- a/css/style.css
+++ b/css/style.css
@@ -93,6 +93,28 @@ main .ms-sidebar .ms-sidebar-menu {
     border: 1px solid #fff;
     font-size: 1.2rem;
 }
+
+/* Contenuto principale parte inferiore */
+
+.ms-lower-main-content .table thead tr th:not(:first-child),
+.ms-lower-main-content .table tbody tr td:not(:first-child) {
+    text-align: center;
+}
+
+.ms-lower-main-content .table tbody img {
+    width: 1.875rem;
+    background-color: inherit;
+}
+
+.ms-lower-main-content .table tbody i {
+    width: 1.875rem;
+    height: 1.875rem;
+    line-height: 1.875rem;
+    color: #6c757d;
+    border: 1px solid #6c757d;
+    border-radius: .3125rem;
+}
+
 /*
 --------
 COMPONENTI
